chore: commit symlink changes

--- a/.cursorignore
+++ b/.cursorignore
@@ -1,50 +1,1 @@
-# Cursor Ignore - Exclude from AI Context
-# This speeds up AI responses and reduces token usage
-
-# Build outputs
-build/
-.dart_tool/
-*.g.dart
-*.freezed.dart
-*.mocks.dart
-
-# Dependencies
-node_modules/
-ios/Pods/
-android/.gradle/
-
-# Generated files
-*.generated.dart
-coverage/
-
-# Large data files
-*.json
-*.csv
-*.log
-
-# Test fixtures
-test/fixtures/
-
-# Documentation (already in docs/)
-CHANGELOG.md
-LICENSE
-
-# IDE
-.vscode/
-.idea/
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Python cache (yacht analysis scripts)
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-
-# Large archives
-*.zip
-*.tar.gz
-*.rar
-
+cursor-template/.cursorignore
