--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,8 @@ app.*.map.json
 /setup-aliases.sh
 /update-template.sh
 
+# Cursor template backups
+.cursor-template-backup.*
+
 # Track subtree directory
 !/cursor-template/
